core-lib/parser/ratioParser.cpp

// Generated from ratio.g4 by ANTLR 4.7


#include "ratioListener.h"
#include "ratioVisitor.h"

#include "ratioParser.h"


using namespace antlrcpp;
using namespace lucy;
using namespace antlr4;

ratioParser::ratioParser(TokenStream *input) : Parser(input) {
	_interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ratioParser::~ratioParser() {
	delete _interpreter;
}

std::string ratioParser::getGrammarFileName() const {
	return "ratio.g4";
}

const std::vector<std::string>& ratioParser::getRuleNames() const {
	return _ruleNames;
}

dfa::Vocabulary& ratioParser::getVocabulary() const {
	return _vocabulary;
}


//----------------- Compilation_unitContext ------------------------------------------------------------------

ratioParser::Compilation_unitContext::Compilation_unitContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ratioParser::Compilation_unitContext::EOF() {
	return getToken(ratioParser::EOF, 0);
}

std::vector<ratioParser::Type_declarationContext *> ratioParser::Compilation_unitContext::type_declaration() {
	return getRuleContexts<ratioParser::Type_declarationContext>();
}

ratioParser::Type_declarationContext* ratioParser::Compilation_unitContext::type_declaration(size_t i) {
	return getRuleContext<ratioParser::Type_declarationContext>(i);
}

std::vector<ratioParser::Method_declarationContext *> ratioParser::Compilation_unitContext::method_declaration() {
	return getRuleContexts<ratioParser::Method_declarationContext>();
}

ratioParser::Method_declarationContext* ratioParser::Compilation_unitContext::method_declaration(size_t i) {
	return getRuleContext<ratioParser::Method_declarationContext>(i);
}

std::vector<ratioParser::Predicate_declarationContext *> ratioParser::Compilation_unitContext::predicate_declaration() {
	return getRuleContexts<ratioParser::Predicate_declarationContext>();
}

ratioParser::Predicate_declarationContext* ratioParser::Compilation_unitContext::predicate_declaration(size_t i) {
	return getRuleContext<ratioParser::Predicate_declarationContext>(i);
}

std::vector<ratioParser::StatementContext *> ratioParser::Compilation_unitContext::statement() {
	return getRuleContexts<ratioParser::StatementContext>();
}

ratioParser::StatementContext* ratioParser::Compilation_unitContext::statement(size_t i) {
	return getRuleContext<ratioParser::StatementContext>(i);
}


size_t ratioParser::Compilation_unitContext::getRuleIndex() const {
	return ratioParser::RuleCompilation_unit;
}

void ratioParser::Compilation_unitContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterCompilation_unit(this);
}

void ratioParser::Compilation_unitContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitCompilation_unit(this);
}


antlrcpp::Any ratioParser::Compilation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitCompilation_unit(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Compilation_unitContext* ratioParser::compilation_unit() {
	Compilation_unitContext *_localctx = _tracker.createInstance<Compilation_unitContext>(_ctx, getState());
	enterRule(_localctx, 0, ratioParser::RuleCompilation_unit);
	size_t _la = 0;

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		enterOuterAlt(_localctx, 1);
		setState(76);
		_errHandler->sync(this);
		_la = _input->LA(1);
		while ((((_la & ~0x3fULL) == 0) &&
			((1ULL << _la) & ((1ULL << ratioParser::TYPE_DEF)
				| (1ULL << ratioParser::REAL)
				| (1ULL << ratioParser::BOOL)
				| (1ULL << ratioParser::STRING)
				| (1ULL << ratioParser::ENUM)
				| (1ULL << ratioParser::CLASS)
				| (1ULL << ratioParser::GOAL)
				| (1ULL << ratioParser::FACT)
				| (1ULL << ratioParser::PREDICATE)
				| (1ULL << ratioParser::NEW)
				| (1ULL << ratioParser::THIS)
				| (1ULL << ratioParser::VOID)
				| (1ULL << ratioParser::TRUE)
				| (1ULL << ratioParser::FALSE)
				| (1ULL << ratioParser::RETURN)
				| (1ULL << ratioParser::LPAREN)
				| (1ULL << ratioParser::LBRACKET)
				| (1ULL << ratioParser::LBRACE)
				| (1ULL << ratioParser::PLUS)
				| (1ULL << ratioParser::MINUS)
				| (1ULL << ratioParser::BANG)
				| (1ULL << ratioParser::ID)
				| (1ULL << ratioParser::NumericLiteral)
				| (1ULL << ratioParser::StringLiteral))) != 0)) {
			setState(74);
			_errHandler->sync(this);
			switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
			case 1: {
				setState(70);
				type_declaration();
				break;
			}

			case 2: {
				setState(71);
				method_declaration();
				break;
			}

			case 3: {
				setState(72);
				predicate_declaration();
				break;
			}

			case 4: {
				setState(73);
				statement();
				break;
			}

			}
			setState(78);
			_errHandler->sync(this);
			_la = _input->LA(1);
		}
		setState(79);
		match(ratioParser::EOF);

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Type_declarationContext ------------------------------------------------------------------

ratioParser::Type_declarationContext::Type_declarationContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

ratioParser::Typedef_declarationContext* ratioParser::Type_declarationContext::typedef_declaration() {
	return getRuleContext<ratioParser::Typedef_declarationContext>(0);
}

ratioParser::Enum_declarationContext* ratioParser::Type_declarationContext::enum_declaration() {
	return getRuleContext<ratioParser::Enum_declarationContext>(0);
}

ratioParser::Class_declarationContext* ratioParser::Type_declarationContext::class_declaration() {
	return getRuleContext<ratioParser::Class_declarationContext>(0);
}


size_t ratioParser::Type_declarationContext::getRuleIndex() const {
	return ratioParser::RuleType_declaration;
}

void ratioParser::Type_declarationContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterType_declaration(this);
}

void ratioParser::Type_declarationContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitType_declaration(this);
}


antlrcpp::Any ratioParser::Type_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitType_declaration(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Type_declarationContext* ratioParser::type_declaration() {
	Type_declarationContext *_localctx = _tracker.createInstance<Type_declarationContext>(_ctx, getState());
	enterRule(_localctx, 2, ratioParser::RuleType_declaration);

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		setState(84);
		_errHandler->sync(this);
		switch (_input->LA(1)) {
		case ratioParser::TYPE_DEF: {
			enterOuterAlt(_localctx, 1);
			setState(81);
			typedef_declaration();
			break;
		}

		case ratioParser::ENUM: {
			enterOuterAlt(_localctx, 2);
			setState(82);
			enum_declaration();
			break;
		}

		case ratioParser::CLASS: {
			enterOuterAlt(_localctx, 3);
			setState(83);
			class_declaration();
			break;
		}

		default:
			throw NoViableAltException(this);
		}

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Typedef_declarationContext ------------------------------------------------------------------

ratioParser::Typedef_declarationContext::Typedef_declarationContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

ratioParser::Primitive_typeContext* ratioParser::Typedef_declarationContext::primitive_type() {
	return getRuleContext<ratioParser::Primitive_typeContext>(0);
}

ratioParser::ExprContext* ratioParser::Typedef_declarationContext::expr() {
	return getRuleContext<ratioParser::ExprContext>(0);
}

tree::TerminalNode* ratioParser::Typedef_declarationContext::ID() {
	return getToken(ratioParser::ID, 0);
}


size_t ratioParser::Typedef_declarationContext::getRuleIndex() const {
	return ratioParser::RuleTypedef_declaration;
}

void ratioParser::Typedef_declarationContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterTypedef_declaration(this);
}

void ratioParser::Typedef_declarationContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitTypedef_declaration(this);
}


antlrcpp::Any ratioParser::Typedef_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitTypedef_declaration(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Typedef_declarationContext* ratioParser::typedef_declaration() {
	Typedef_declarationContext *_localctx = _tracker.createInstance<Typedef_declarationContext>(_ctx, getState());
	enterRule(_localctx, 4, ratioParser::RuleTypedef_declaration);

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		enterOuterAlt(_localctx, 1);
		setState(86);
		match(ratioParser::TYPE_DEF);
		setState(87);
		primitive_type();
		setState(88);
		expr(0);
		setState(89);
		dynamic_cast<Typedef_declarationContext *>(_localctx)->name = match(ratioParser::ID);
		setState(90);
		match(ratioParser::SEMICOLON);

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Enum_declarationContext ------------------------------------------------------------------

ratioParser::Enum_declarationContext::Enum_declarationContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

std::vector<ratioParser::Enum_constantsContext *> ratioParser::Enum_declarationContext::enum_constants() {
	return getRuleContexts<ratioParser::Enum_constantsContext>();
}

ratioParser::Enum_constantsContext* ratioParser::Enum_declarationContext::enum_constants(size_t i) {
	return getRuleContext<ratioParser::Enum_constantsContext>(i);
}

tree::TerminalNode* ratioParser::Enum_declarationContext::ID() {
	return getToken(ratioParser::ID, 0);
}


size_t ratioParser::Enum_declarationContext::getRuleIndex() const {
	return ratioParser::RuleEnum_declaration;
}

void ratioParser::Enum_declarationContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterEnum_declaration(this);
}

void ratioParser::Enum_declarationContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitEnum_declaration(this);
}


antlrcpp::Any ratioParser::Enum_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitEnum_declaration(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Enum_declarationContext* ratioParser::enum_declaration() {
	Enum_declarationContext *_localctx = _tracker.createInstance<Enum_declarationContext>(_ctx, getState());
	enterRule(_localctx, 6, ratioParser::RuleEnum_declaration);
	size_t _la = 0;

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		enterOuterAlt(_localctx, 1);
		setState(92);
		match(ratioParser::ENUM);
		setState(93);
		dynamic_cast<Enum_declarationContext *>(_localctx)->name = match(ratioParser::ID);
		setState(94);
		enum_constants();
		setState(99);
		_errHandler->sync(this);
		_la = _input->LA(1);
		while (_la == ratioParser::BAR) {
			setState(95);
			match(ratioParser::BAR);
			setState(96);
			enum_constants();
			setState(101);
			_errHandler->sync(this);
			_la = _input->LA(1);
		}
		setState(102);
		match(ratioParser::SEMICOLON);

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Enum_constantsContext ------------------------------------------------------------------

ratioParser::Enum_constantsContext::Enum_constantsContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ratioParser::Enum_constantsContext::StringLiteral() {
	return getTokens(ratioParser::StringLiteral);
}

tree::TerminalNode* ratioParser::Enum_constantsContext::StringLiteral(size_t i) {
	return getToken(ratioParser::StringLiteral, i);
}

ratioParser::TypeContext* ratioParser::Enum_constantsContext::type() {
	return getRuleContext<ratioParser::TypeContext>(0);
}


size_t ratioParser::Enum_constantsContext::getRuleIndex() const {
	return ratioParser::RuleEnum_constants;
}

void ratioParser::Enum_constantsContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterEnum_constants(this);
}

void ratioParser::Enum_constantsContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitEnum_constants(this);
}


antlrcpp::Any ratioParser::Enum_constantsContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitEnum_constants(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Enum_constantsContext* ratioParser::enum_constants() {
	Enum_constantsContext *_localctx = _tracker.createInstance<Enum_constantsContext>(_ctx, getState());
	enterRule(_localctx, 8, ratioParser::RuleEnum_constants);
	size_t _la = 0;

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		setState(115);
		_errHandler->sync(this);
		switch (_input->LA(1)) {
		case ratioParser::LBRACE: {
			enterOuterAlt(_localctx, 1);
			setState(104);
			match(ratioParser::LBRACE);
			setState(105);
			match(ratioParser::StringLiteral);
			setState(110);
			_errHandler->sync(this);
			_la = _input->LA(1);
			while (_la == ratioParser::COMMA) {
				setState(106);
				match(ratioParser::COMMA);
				setState(107);
				match(ratioParser::StringLiteral);
				setState(112);
				_errHandler->sync(this);
				_la = _input->LA(1);
			}
			setState(113);
			match(ratioParser::RBRACE);
			break;
		}

		case ratioParser::REAL:
		case ratioParser::BOOL:
		case ratioParser::STRING:
		case ratioParser::ID: {
			enterOuterAlt(_localctx, 2);
			setState(114);
			type();
			break;
		}

		default:
			throw NoViableAltException(this);
		}

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Class_declarationContext ------------------------------------------------------------------

ratioParser::Class_declarationContext::Class_declarationContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ratioParser::Class_declarationContext::ID() {
	return getToken(ratioParser::ID, 0);
}

ratioParser::Type_listContext* ratioParser::Class_declarationContext::type_list() {
	return getRuleContext<ratioParser::Type_listContext>(0);
}

std::vector<ratioParser::MemberContext *> ratioParser::Class_declarationContext::member() {
	return getRuleContexts<ratioParser::MemberContext>();
}

ratioParser::MemberContext* ratioParser::Class_declarationContext::member(size_t i) {
	return getRuleContext<ratioParser::MemberContext>(i);
}


size_t ratioParser::Class_declarationContext::getRuleIndex() const {
	return ratioParser::RuleClass_declaration;
}

void ratioParser::Class_declarationContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterClass_declaration(this);
}

void ratioParser::Class_declarationContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitClass_declaration(this);
}


antlrcpp::Any ratioParser::Class_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitClass_declaration(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Class_declarationContext* ratioParser::class_declaration() {
	Class_declarationContext *_localctx = _tracker.createInstance<Class_declarationContext>(_ctx, getState());
	enterRule(_localctx, 10, ratioParser::RuleClass_declaration);
	size_t _la = 0;

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		enterOuterAlt(_localctx, 1);
		setState(117);
		match(ratioParser::CLASS);
		setState(118);
		dynamic_cast<Class_declarationContext *>(_localctx)->name = match(ratioParser::ID);
		setState(121);
		_errHandler->sync(this);

		_la = _input->LA(1);
		if (_la == ratioParser::COLON) {
			setState(119);
			match(ratioParser::COLON);
			setState(120);
			type_list();
		}
		setState(123);
		match(ratioParser::LBRACE);
		setState(127);
		_errHandler->sync(this);
		_la = _input->LA(1);
		while ((((_la & ~0x3fULL) == 0) &&
			((1ULL << _la) & ((1ULL << ratioParser::TYPE_DEF)
				| (1ULL << ratioParser::REAL)
				| (1ULL << ratioParser::BOOL)
				| (1ULL << ratioParser::STRING)
				| (1ULL << ratioParser::ENUM)
				| (1ULL << ratioParser::CLASS)
				| (1ULL << ratioParser::PREDICATE)
				| (1ULL << ratioParser::VOID)
				| (1ULL << ratioParser::ID))) != 0)) {
			setState(124);
			member();
			setState(129);
			_errHandler->sync(this);
			_la = _input->LA(1);
		}
		setState(130);
		match(ratioParser::RBRACE);

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- MemberContext ------------------------------------------------------------------

ratioParser::MemberContext::MemberContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

ratioParser::Field_declarationContext* ratioParser::MemberContext::field_declaration() {
	return getRuleContext<ratioParser::Field_declarationContext>(0);
}

ratioParser::Method_declarationContext* ratioParser::MemberContext::method_declaration() {
	return getRuleContext<ratioParser::Method_declarationContext>(0);
}

ratioParser::Constructor_declarationContext* ratioParser::MemberContext::constructor_declaration() {
	return getRuleContext<ratioParser::Constructor_declarationContext>(0);
}

ratioParser::Predicate_declarationContext* ratioParser::MemberContext::predicate_declaration() {
	return getRuleContext<ratioParser::Predicate_declarationContext>(0);
}

ratioParser::Type_declarationContext* ratioParser::MemberContext::type_declaration() {
	return getRuleContext<ratioParser::Type_declarationContext>(0);
}


size_t ratioParser::MemberContext::getRuleIndex() const {
	return ratioParser::RuleMember;
}

void ratioParser::MemberContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterMember(this);
}

void ratioParser::MemberContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitMember(this);
}


antlrcpp::Any ratioParser::MemberContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitMember(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::MemberContext* ratioParser::member() {
	MemberContext *_localctx = _tracker.createInstance<MemberContext>(_ctx, getState());
	enterRule(_localctx, 12, ratioParser::RuleMember);

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		setState(137);
		_errHandler->sync(this);
		switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
		case 1: {
			enterOuterAlt(_localctx, 1);
			setState(132);
			field_declaration();
			break;
		}

		case 2: {
			enterOuterAlt(_localctx, 2);
			setState(133);
			method_declaration();
			break;
		}

		case 3: {
			enterOuterAlt(_localctx, 3);
			setState(134);
			constructor_declaration();
			break;
		}

		case 4: {
			enterOuterAlt(_localctx, 4);
			setState(135);
			predicate_declaration();
			break;
		}

		case 5: {
			enterOuterAlt(_localctx, 5);
			setState(136);
			type_declaration();
			break;
		}

		}

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Field_declarationContext ------------------------------------------------------------------

ratioParser::Field_declarationContext::Field_declarationContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

ratioParser::TypeContext* ratioParser::Field_declarationContext::type() {
	return getRuleContext<ratioParser::TypeContext>(0);
}

std::vector<ratioParser::Variable_decContext *> ratioParser::Field_declarationContext::variable_dec() {
	return getRuleContexts<ratioParser::Variable_decContext>();
}

ratioParser::Variable_decContext* ratioParser::Field_declarationContext::variable_dec(size_t i) {
	return getRuleContext<ratioParser::Variable_decContext>(i);
}


size_t ratioParser::Field_declarationContext::getRuleIndex() const {
	return ratioParser::RuleField_declaration;
}

void ratioParser::Field_declarationContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterField_declaration(this);
}

void ratioParser::Field_declarationContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitField_declaration(this);
}


antlrcpp::Any ratioParser::Field_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitField_declaration(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Field_declarationContext* ratioParser::field_declaration() {
	Field_declarationContext *_localctx = _tracker.createInstance<Field_declarationContext>(_ctx, getState());
	enterRule(_localctx, 14, ratioParser::RuleField_declaration);
	size_t _la = 0;

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		enterOuterAlt(_localctx, 1);
		setState(139);
		type();
		setState(140);
		variable_dec();
		setState(145);
		_errHandler->sync(this);
		_la = _input->LA(1);
		while (_la == ratioParser::COMMA) {
			setState(141);
			match(ratioParser::COMMA);
			setState(142);
			variable_dec();
			setState(147);
			_errHandler->sync(this);
			_la = _input->LA(1);
		}
		setState(148);
		match(ratioParser::SEMICOLON);

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Variable_decContext ------------------------------------------------------------------

ratioParser::Variable_decContext::Variable_decContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ratioParser::Variable_decContext::ID() {
	return getToken(ratioParser::ID, 0);
}

ratioParser::ExprContext* ratioParser::Variable_decContext::expr() {
	return getRuleContext<ratioParser::ExprContext>(0);
}


size_t ratioParser::Variable_decContext::getRuleIndex() const {
	return ratioParser::RuleVariable_dec;
}

void ratioParser::Variable_decContext::enterRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->enterVariable_dec(this);
}

void ratioParser::Variable_decContext::exitRule(tree::ParseTreeListener *listener) {
	auto parserListener = dynamic_cast<ratioListener *>(listener);
	if (parserListener != nullptr)
		parserListener->exitVariable_dec(this);
}


antlrcpp::Any ratioParser::Variable_decContext::accept(tree::ParseTreeVisitor *visitor) {
	if (auto parserVisitor = dynamic_cast<ratioVisitor*>(visitor))
		return parserVisitor->visitVariable_dec(this);
	else
		return visitor->visitChildren(this);
}

ratioParser::Variable_decContext* ratioParser::variable_dec() {
	Variable_decContext *_localctx = _tracker.createInstance<Variable_decContext>(_ctx, getState());
	enterRule(_localctx, 16, ratioParser::RuleVariable_dec);
	size_t _la = 0;

	auto onExit = finally([=] {
		exitRule();
	});
	try {
		enterOuterAlt(_localctx, 1);
		setState(150);
		dynamic_cast<Variable_decContext *>(_localctx)->name = match(ratioParser::ID);
		setState(153);
		_errHandler->sync(this);

		_la = _input->LA(1);
		if (_la == ratioParser::EQUAL) {
			setState(151);
			match(ratioParser::EQUAL);
			setState(152);
			expr(0);
		}

	}
	catch (RecognitionException &e) {
		_errHandler->reportError(this, e);
		_localctx->exception = std::current_exception();
		_errHandler->recover(this, _localctx->exception);
	}

	return _localctx;
}

//----------------- Method_declarationContext ------------------------------------------------------------------

ratioParser::Method_declarationContext::Method_declarationContext(ParserRuleContext *parent, size_t invokingState)
	: ParserRuleContext(parent, invokingState) {
}


size_t ratioParser::Method_declarationContext::getRuleIndex() const {
	return ratioParser::RuleMethod_declaration;
}

void ratioParser::Method_declarationContext::copyFrom(Method_declarationContext *ctx) {
	ParserRuleContext::copyFrom(ctx);
}

//----------------- Void_method_declarationContext ------------------------------------------------------------------

ratioParser::BlockContext* ratioParser::Void_method_declarationContext::block() {
	return getRuleContext<ratioParser::BlockContext>(0);
}

tree::TerminalNode* ratioParser::Void_method_declarationContext::ID() {
	return getToken(ratioParser::ID, 0);
}
